[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/FontTitle.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://UI/SoundAndMusicToggle.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/MusicSound.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.588235 )

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -120 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_Pause_fadein_ended"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -120 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_Pause_fadeout_ended"
} ]
}

[node name="MainMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 20.0
margin_right = 310.0
margin_bottom = 224.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "ROOT OUT"
align = 1
valign = 1
autowrap = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 300.0
margin_bottom = 123.0
mouse_filter = 1

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 110.0
margin_right = 190.0
margin_bottom = 68.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" parent="MarginContainer/VBoxContainer/CenterContainer/Buttons" instance=ExtResource( 2 )]
visible = false

[node name="Label" parent="MarginContainer/VBoxContainer/CenterContainer/Buttons/Continue" index="0"]
text = "CONTINUE"

[node name="NewGame" parent="MarginContainer/VBoxContainer/CenterContainer/Buttons" instance=ExtResource( 2 )]

[node name="Story" parent="MarginContainer/VBoxContainer/CenterContainer/Buttons" instance=ExtResource( 2 )]
margin_top = 26.0
margin_bottom = 42.0

[node name="Label" parent="MarginContainer/VBoxContainer/CenterContainer/Buttons/Story" index="0"]
text = "STORY"

[node name="ExitGame" parent="MarginContainer/VBoxContainer/CenterContainer/Buttons" instance=ExtResource( 2 )]
margin_top = 52.0
margin_bottom = 68.0

[node name="Label" parent="MarginContainer/VBoxContainer/CenterContainer/Buttons/ExitGame" index="0"]
text = "EXIT GAME"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 300.0
margin_bottom = 184.0

[node name="MusicSound" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 94.0
margin_right = 205.0
margin_bottom = 46.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundAndMusicToggle" parent="MarginContainer/VBoxContainer/CenterContainer2/MusicSound" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 57.0
margin_bottom = 46.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer2/MusicSound"]
margin_left = 61.0
margin_right = 111.0
margin_bottom = 46.0
custom_constants/separation = 6

[node name="Center" type="CenterContainer" parent="MarginContainer/VBoxContainer/CenterContainer2/MusicSound/VBoxContainer"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 20 )

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/CenterContainer2/MusicSound/VBoxContainer/Center"]
margin_top = 2.0
margin_right = 50.0
margin_bottom = 18.0
rect_min_size = Vector2( 50, 0 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center2" type="CenterContainer" parent="MarginContainer/VBoxContainer/CenterContainer2/MusicSound/VBoxContainer"]
margin_top = 26.0
margin_right = 50.0
margin_bottom = 42.0

[node name="SoundSlider" type="HSlider" parent="MarginContainer/VBoxContainer/CenterContainer2/MusicSound/VBoxContainer/Center2"]
margin_right = 50.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 2 )
anims/FadeOut = SubResource( 3 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/CenterContainer2/MusicSound/VBoxContainer/Center/MusicSlider" to="MarginContainer/VBoxContainer/CenterContainer2/MusicSound" method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/CenterContainer2/MusicSound/VBoxContainer/Center2/SoundSlider" to="MarginContainer/VBoxContainer/CenterContainer2/MusicSound" method="_on_SoundSlider_value_changed"]

[editable path="MarginContainer/VBoxContainer/CenterContainer/Buttons/Continue"]
[editable path="MarginContainer/VBoxContainer/CenterContainer/Buttons/NewGame"]
[editable path="MarginContainer/VBoxContainer/CenterContainer/Buttons/Story"]
[editable path="MarginContainer/VBoxContainer/CenterContainer/Buttons/ExitGame"]
